filtered table and sequences -> new barplot

--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ba335e5",
+   "id": "fb679d84-ac1e-46d8-a727-801dc4c4e20d",
    "metadata": {},
    "source": [
     "Taxonomy\n",
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "27a911cc",
+   "id": "1c0fde3e-0106-4164-a46f-dc99d671734d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,14 +35,14 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dbeaedb4",
+   "id": "c2f76713-c637-4de9-b767-a71084886c80",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-11-02 10:06:54 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/gg-13-8-99-515-806-nb-classifier.qza [28289645/28289645] -> \"CE/515f-806r-classifier.qza\" [1]\n"
+      "2022-11-01 07:26:55 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/gg-13-8-99-515-806-nb-classifier.qza [28289645/28289645] -> \"CE/515f-806r-classifier.qza\" [1]\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a57b2982",
+   "id": "0d76ff74-465b-4664-9af0-9f6b8ab9299c",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17762115",
+   "id": "1d0dfa34-bd0f-485f-afee-d06917fc40fe",
    "metadata": {},
    "source": [
     "This should have created a new taxonomy.qza artifact (containing our taxonomic assignments per feature)"
@@ -84,14 +84,14 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ae8e5d5d",
+   "id": "f9effea5-2e2c-460f-962c-9a39e629c73d",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mUUID\u001b[0m:        681c3a56-4a2a-4db6-8bd9-ad30c3a5b7bb\n",
+      "\u001b[32mUUID\u001b[0m:        24a0655a-6f0c-4904-83fb-b1a2ee622b2d\n",
       "\u001b[32mType\u001b[0m:        FeatureData[Taxonomy]\n",
       "\u001b[32mData format\u001b[0m: TSVTaxonomyDirectoryFormat\n"
      ]
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d3f4872",
+   "id": "6de99771-f9d9-4ee3-8e5e-fdff856a5f8d",
    "metadata": {},
    "source": [
     "Visualizations\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0689abd1",
+   "id": "01775c96-c2a4-4849-814b-ec6c346db2d3",
    "metadata": {},
    "outputs": [
     {
@@ -135,16 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9ac18240",
+   "id": "a2819261-1db0-4991-9658-e38b6a5381d5",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<<<<<<< local\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -187,63 +180,6 @@
      "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "=======\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div><img onload=\"(function(div, url){\n",
-       "if (typeof require !== 'undefined') {\n",
-       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
-       "} else {\n",
-       "    var baseURL = JSON.parse(\n",
-       "        document.getElementById('jupyter-config-data').innerHTML\n",
-       "    ).baseUrl.slice(0, -1);\n",
-       "}\n",
-       "url = baseURL + url;\n",
-       "fetch(url).then(function(res) {\n",
-       "    if (res.status === 404) {\n",
-       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
-       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
-       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
-       "                        '<br /><br />(Interactive output not available on ' +\n",
-       "                        'static notebook viewer services like nbviewer.)';\n",
-       "    } else if (res.status === 409) {\n",
-       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
-       "                        ' to see the visualization.';\n",
-       "    } else if (res.ok) {\n",
-       "        url = res.url;\n",
-       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
-       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
-       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
-       "                        ' target=\\'_blank\\'>new window</a>'\n",
-       "    } else {\n",
-       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
-       "                        ' errors.';\n",
-       "    }\n",
-       "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-0xq_9vtl')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
-      ],
-      "text/plain": [
-       "<visualization: Visualization uuid: fa5f4d9b-5e86-4469-9151-d17594aa1016>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ">>>>>>> remote\n"
-     ]
     }
    ],
    "source": [
@@ -252,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ad7fedc",
+   "id": "17a89e80-dee8-4744-965e-bcf7a118438f",
    "metadata": {},
    "source": [
     "By combining the taxonomic inforamtion with the metadata of our samples we can also get a hint of what the distribution of species is in the different samples! \n",
@@ -261,8 +197,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "180ab70c",
+   "execution_count": 8,
+   "id": "e11090e3-8466-4337-a0e1-7293ded1c762",
    "metadata": {},
    "outputs": [
     {
@@ -284,8 +220,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "eea11ded",
+   "execution_count": 10,
+   "id": "56de86eb-90c6-447c-bbce-fa59d822edd5",
    "metadata": {},
    "outputs": [
     {
@@ -306,8 +242,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "9ae9f112",
+   "execution_count": 11,
+   "id": "59b9c499-b4d5-4dfa-83a8-cc6c9c7514f2",
    "metadata": {},
    "outputs": [
     {
@@ -343,13 +279,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-iyw3ekw8')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-3fq68ee3')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: f2c0a510-17c9-43c6-81d7-4ccaadd2e8bc>"
+       "<visualization: Visualization uuid: a58c588a-84b0-4329-8b2f-e99b37f1aef3>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,8 +296,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "19af826c",
+   "execution_count": 12,
+   "id": "1adc0d65-9a05-4841-9141-645fb5a8ea15",
    "metadata": {},
    "outputs": [
     {
@@ -383,8 +319,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "be73358b",
+   "execution_count": 13,
+   "id": "b837c4b9-9a11-47a5-b968-6967c1de97ff",
    "metadata": {},
    "outputs": [
     {
@@ -420,13 +356,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-evabsuhc')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-wk1fkp48')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: f9fe30df-e2d5-4ed0-8a9b-4a9fd20dc786>"
+       "<visualization: Visualization uuid: 905bd027-1cbf-4c2d-ba9c-8a255408bbb3>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30fbc5eb",
+   "id": "6ae62e1c-61e1-4cd8-bc57-ee19f0865f06",
    "metadata": {
     "tags": []
    },
@@ -446,8 +382,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c27096f6-3bde-4f68-a1c2-f76b36740207",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureTable[Frequency] to: CE/dada2_table_align_filtered.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter feature table and exclude mitochondria,chloroplast\n",
+    "! qiime taxa filter-table \\\n",
+    "--i-table $data_dir/dada2_table_aligned.qza \\\n",
+    "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "--p-exclude mitochondria,chloroplast \\\n",
+    "--o-filtered-table $data_dir/dada2_table_align_filtered.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0efe945d-0f9b-4061-8c70-51749ee5f3d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureData[Sequence] to: CE/dada2_rep_set_filtered.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#filter sequences and exclude mitochondria,chloroplast\n",
+    "! qiime taxa filter-seqs \\\n",
+    "--i-sequences $data_dir/dada2_rep_set.qza \\\n",
+    "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "--p-exclude mitochondria,chloroplast \\\n",
+    "--o-filtered-sequences $data_dir/dada2_rep_set_filtered.qza"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e79c0117-56b8-404d-ab5e-14586fc21e93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/taxa-bar-plots_v4_filtered.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
+    "#this is the new barplot with the filtered deature atble and sequences NO MITOCHONDRIA AND CHLOOROPLAST VISIBLE\n",
+    "! qiime taxa barplot \\\n",
+    "--i-table $data_dir/dada2_table_align_filtered.qza \\\n",
+    "--i-taxonomy $data_dir/taxonomy_v4.qza \\\n",
+    "--m-metadata-file $data_dir/food-metadata.tsv \\\n",
+    "--o-visualization $data_dir/taxa-bar-plots_v4_filtered.qzv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "dafa19d5-c486-4d0a-84c9-607783d0b312",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-7uod70cc')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: d60898bf-ba86-4cb3-8734-27158f53f5ba>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Visualization.load(f'{data_dir}/taxa-bar-plots_v4_filtered.qzv')"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "06058c64",
+   "id": "25423286-cb1e-434c-945f-31a84a249ed5",
    "metadata": {
     "tags": []
    },
@@ -457,19 +519,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "4656c9ca",
+   "execution_count": null,
+   "id": "4f2b6181-8a90-4ecd-8c64-7c0e570ae0a5",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndentationError",
-     "evalue": "unexpected indent (1759767849.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [12]\u001b[0;36m\u001b[0m\n\u001b[0;31m    get_ipython().system(' qiime alignment mafft       --i-sequences $data_dir/rep-seqs-filtered.qza       --o-alignment $data_dir/aligned-rep-seqs.qza')\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Sequence alignment\n",
     " ! qiime alignment mafft \\\n",
@@ -480,7 +533,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d7f9110",
+   "id": "00a14d5c-f133-48e7-b134-4526affd9ac3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d14567a6",
+   "id": "4e41d479-6d5d-46c1-9a43-8ea64a3b9597",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +563,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "09716e8b",
+   "id": "fbf3ae38-9ccc-44a4-8856-f327a6771341",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ee4c7a2",
+   "id": "d402a427-e2b4-445d-827a-341cf993d924",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -533,7 +586,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a244e625",
+   "id": "10829e43-1693-4508-ba87-9ad71c36f040",
    "metadata": {
     "tags": []
    },
@@ -544,7 +597,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2068fce9",
+   "id": "51e30612-57e1-4ad1-b7f3-06c77434a696",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c537f99",
+   "id": "ea13ddf4-56d2-4683-84ef-16505432944a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58e10c41",
+   "id": "2f27c237-e988-4dab-8904-964c5eb5a42f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -582,7 +635,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "550393c2",
+   "id": "4afcb335-1ddd-4892-910a-bfeae8bd0fd3",
    "metadata": {},
    "outputs": [],
    "source": [
