--- a/taxonomy.ipynb
+++ b/taxonomy.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "id": "1c0fde3e-0106-4164-a46f-dc99d671734d",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "id": "c2f76713-c637-4de9-b767-a71084886c80",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2022-11-01 07:26:55 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/gg-13-8-99-515-806-nb-classifier.qza [28289645/28289645] -> \"CE/515f-806r-classifier.qza\" [1]\n"
+      "2022-11-02 10:39:42 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/gg-13-8-99-515-806-nb-classifier.qza [28289645/28289645] -> \"CE/515f-806r-classifier.qza\" [1]\n"
      ]
     }
    ],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "id": "0d76ff74-465b-4664-9af0-9f6b8ab9299c",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "id": "f9effea5-2e2c-460f-962c-9a39e629c73d",
    "metadata": {},
    "outputs": [
@@ -91,7 +91,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[32mUUID\u001b[0m:        24a0655a-6f0c-4904-83fb-b1a2ee622b2d\n",
+      "\u001b[32mUUID\u001b[0m:        bee1106c-4fdc-4415-80c8-7b70438075cb\n",
       "\u001b[32mType\u001b[0m:        FeatureData[Taxonomy]\n",
       "\u001b[32mData format\u001b[0m: TSVTaxonomyDirectoryFormat\n"
      ]
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "id": "01775c96-c2a4-4849-814b-ec6c346db2d3",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "id": "a2819261-1db0-4991-9658-e38b6a5381d5",
    "metadata": {},
    "outputs": [
@@ -171,13 +171,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-sv9mg9ri')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-m1dz0_fo')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 25326f1a-4573-4976-b1a6-a30b926b7b60>"
+       "<visualization: Visualization uuid: 3a4f25b7-cc5a-4609-8904-038a61336e53>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "id": "e11090e3-8466-4337-a0e1-7293ded1c762",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "id": "56de86eb-90c6-447c-bbce-fa59d822edd5",
    "metadata": {},
    "outputs": [
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "id": "59b9c499-b4d5-4dfa-83a8-cc6c9c7514f2",
    "metadata": {},
    "outputs": [
@@ -279,13 +279,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-3fq68ee3')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-q6pixbrh')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: a58c588a-84b0-4329-8b2f-e99b37f1aef3>"
+       "<visualization: Visualization uuid: 419aac1c-07e6-4065-b500-3966d534c83e>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "id": "1adc0d65-9a05-4841-9141-645fb5a8ea15",
    "metadata": {},
    "outputs": [
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "id": "b837c4b9-9a11-47a5-b968-6967c1de97ff",
    "metadata": {},
    "outputs": [
@@ -356,13 +356,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-wk1fkp48')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-9e7f68ri')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: 905bd027-1cbf-4c2d-ba9c-8a255408bbb3>"
+       "<visualization: Visualization uuid: 5ef150c6-59d1-4dfa-b930-63c1bd5f01ec>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 26,
    "id": "c27096f6-3bde-4f68-a1c2-f76b36740207",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "id": "0efe945d-0f9b-4061-8c70-51749ee5f3d4",
    "metadata": {},
    "outputs": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 28,
    "id": "e79c0117-56b8-404d-ab5e-14586fc21e93",
    "metadata": {},
    "outputs": [
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 29,
    "id": "dafa19d5-c486-4d0a-84c9-607783d0b312",
    "metadata": {},
    "outputs": [
@@ -492,13 +492,13 @@
        "                        ' errors.';\n",
        "    }\n",
        "});\n",
-       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-7uod70cc')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-u4n0_or9')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
       ],
       "text/plain": [
-       "<visualization: Visualization uuid: d60898bf-ba86-4cb3-8734-27158f53f5ba>"
+       "<visualization: Visualization uuid: 02b22756-aa14-4ac3-9340-65e092310bc0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -519,23 +519,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "4f2b6181-8a90-4ecd-8c64-7c0e570ae0a5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureData[AlignedSequence] to: CE/aligned-rep-seqs.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "#Sequence alignment\n",
-    " ! qiime alignment mafft \\\n",
-    "     --i-sequences $data_dir/rep-seqs-filtered.qza \\\n",
+    "! qiime alignment mafft \\\n",
+    "     --i-sequences $data_dir/dada2_rep_set_filtered.qza \\\n",
     "     --o-alignment $data_dir/aligned-rep-seqs.qza"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "00a14d5c-f133-48e7-b134-4526affd9ac3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved FeatureData[AlignedSequence] to: CE/masked-aligned-rep-seqs.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "#Alignment masking\n",
     "! qiime alignment mask \\\n",
@@ -545,10 +563,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "4e41d479-6d5d-46c1-9a43-8ea64a3b9597",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Phylogeny[Unrooted] to: CE/fasttree-tree.qza\u001b[0m\n",
+      "\u001b[0m\u001b[32mSaved Phylogeny[Rooted] to: CE/fasttree-tree-rooted.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "#Tree construction\n",
     "! qiime phylogeny fasttree \\\n",
@@ -562,24 +590,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "fbf3ae38-9ccc-44a4-8856-f327a6771341",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/fasttree-tree-rooted.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "#Tree visualization\n",
-    " ! qiime empress tree-plot \\\n",
+    "! qiime empress tree-plot \\\n",
     "     --i-tree $data_dir/fasttree-tree-rooted.qza \\\n",
-    "     --m-feature-metadata-file $data_dir/taxonomy.qza \\\n",
+    "     --m-feature-metadata-file $data_dir/taxonomy_v4.qza \\\n",
     "     --o-visualization $data_dir/fasttree-tree-rooted.qzv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "d402a427-e2b4-445d-827a-341cf993d924",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-b31pf9n2')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: f186d5c5-d2d0-4784-879b-c7044d907516>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Visualization.load(f'{data_dir}/fasttree-tree-rooted.qzv')"
    ]
@@ -596,23 +677,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "51e30612-57e1-4ad1-b7f3-06c77434a696",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2022-11-02 10:48:03 URL:https://s3-us-west-2.amazonaws.com/qiime2-data/2021.4/common/sepp-refs-gg-13-8.qza [50161069/50161069] -> \"CE/sepp-refs-gg-13-8.qza\" [1]\n"
+     ]
+    }
+   ],
    "source": [
     "! wget -nv -O $data_dir/sepp-refs-gg-13-8.qza https://data.qiime2.org/2021.4/common/sepp-refs-gg-13-8.qza"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "ea13ddf4-56d2-4683-84ef-16505432944a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Phylogeny[Rooted] to: CE/sepp-tree.qza\u001b[0m\n",
+      "\u001b[32mSaved Placements to: CE/sepp-tree-placements.qza\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
     "! qiime fragment-insertion sepp \\\n",
-    "    --i-representative-sequences $data_dir/rep-seqs-filtered.qza \\\n",
+    "    --i-representative-sequences $data_dir/dada2_rep_set_filtered.qza \\\n",
     "    --i-reference-database $data_dir/sepp-refs-gg-13-8.qza \\\n",
     "    --p-threads 2 \\\n",
     "    --o-tree $data_dir/sepp-tree.qza \\\n",
@@ -621,23 +720,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "2f27c237-e988-4dab-8904-964c5eb5a42f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32mSaved Visualization to: CE/sepp-tree-placements-tree.qzv\u001b[0m\n",
+      "\u001b[0m"
+     ]
+    }
+   ],
    "source": [
-    "  ! qiime empress tree-plot \\\n",
+    "! qiime empress tree-plot \\\n",
     "      --i-tree $data_dir/sepp-tree.qza \\\n",
-    "      --m-feature-metadata-file $data_dir/taxonomy.qza \\\n",
+    "      --m-feature-metadata-file $data_dir/taxonomy_v4.qza \\\n",
     "      --o-visualization $data_dir/sepp-tree-placements-tree.qzv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "4afcb335-1ddd-4892-910a-bfeae8bd0fd3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div><img onload=\"(function(div, url){\n",
+       "if (typeof require !== 'undefined') {\n",
+       "    var baseURL = require.toUrl('').split('/').slice(0, -2).join('/');\n",
+       "} else {\n",
+       "    var baseURL = JSON.parse(\n",
+       "        document.getElementById('jupyter-config-data').innerHTML\n",
+       "    ).baseUrl.slice(0, -1);\n",
+       "}\n",
+       "url = baseURL + url;\n",
+       "fetch(url).then(function(res) {\n",
+       "    if (res.status === 404) {\n",
+       "        div.innerHTML = 'Install QIIME 2 Jupyter extension with:<br />' +\n",
+       "                        '<code>jupyter serverextension enable --py qiime2' +\n",
+       "                        ' --sys-prefix</code><br />then restart your server.' +\n",
+       "                        '<br /><br />(Interactive output not available on ' +\n",
+       "                        'static notebook viewer services like nbviewer.)';\n",
+       "    } else if (res.status === 409) {\n",
+       "        div.innerHTML = 'Visualization no longer in scope. Re-run this cell' +\n",
+       "                        ' to see the visualization.';\n",
+       "    } else if (res.ok) {\n",
+       "        url = res.url;\n",
+       "        div.innerHTML = '<iframe src=\\'' + url + '\\' style=\\'' +\n",
+       "                        'width: 100%; height: 700px; border: 0;\\'>' +\n",
+       "                        '</iframe><hr />Open in a: <a href=\\'' + url + '\\'' +\n",
+       "                        ' target=\\'_blank\\'>new window</a>'\n",
+       "    } else {\n",
+       "        div.innerHTML = 'Something has gone wrong. Check notebook server for' +\n",
+       "                        ' errors.';\n",
+       "    }\n",
+       "});\n",
+       "})(this.parentElement, '/qiime2/redirect?location=/tmp/qiime2-archive-f92ic12b')\" src=\"data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==\" /></div>"
+      ],
+      "text/plain": [
+       "<visualization: Visualization uuid: bc38cde5-bb4f-4fd7-96bb-8a42ab410f6c>"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Visualization.load(f'{data_dir}/sepp-tree-placements-tree.qzv')"
    ]
