--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -1,6 +1,99 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "c8d0b581-fbd6-44b1-b044-73dd03b00d0d",
+   "metadata": {},
+   "source": [
+    "# Diversity analysis\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12b9c91a-e129-487f-bcb6-e1329a884c7b",
+   "metadata": {},
+   "source": [
+    "## Alpha rarefaction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f69da5f5-3154-4854-8c93-84a6a2a79873",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59401467-6c5e-4133-a21d-8ad55f0acfd5",
+   "metadata": {},
+   "source": [
+    "## Diversity analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43202e29-d2d3-4036-9477-170c3dbac1a3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10ec403b-496e-4919-b70e-54d23e19ae04",
+   "metadata": {},
+   "source": [
+    "## Alpha diversity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec8f2f16-4045-4af5-8266-513450a083d2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69cf080c-50f8-4141-b481-87b2b0627f31",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d8e58511-366d-4cde-91a4-608a72a16193",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Beta diversity"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.13"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
