--- a/diversity.ipynb
+++ b/diversity.ipynb
@@ -29,6 +29,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0212ba43-0406-4c97-8ad2-4eb41425600e",
+   "metadata": {},
+   "source": [
+    "Artifacts used for alpha-diversity (start)\n",
+    "- dada2_table_align_filtered.qza"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "12b9c91a-e129-487f-bcb6-e1329a884c7b",
    "metadata": {},
    "source": [
@@ -36,9 +45,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b2f93508-2e0b-4fca-b8d7-967e4b846439",
+   "metadata": {},
+   "source": [
+    "Using alpha-rarefaction we can decide which rarefying threshold is bes suited for our data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f69da5f5-3154-4854-8c93-84a6a2a79873",
+   "id": "a501688e-0dca-47c2-9e8e-5f3b7d8e12d7",
    "metadata": {},
    "outputs": [],
    "source": []
